# time-series

./: .gitignore  README.md  pyproject.toml
python/: requirements.txt
python/streamlit/: 0_👋_Introdução.py  __init__.py  data.py  filters.csv
python/streamlit/.streamlit/: config.toml
python/streamlit/functions/: __init__.py  dbFunctions.py  filterFunctions.py
python/streamlit/functions/backend/: downloadData.py  sessionState.py
python/streamlit/functions/frontend/: sidebar.py
python/streamlit/functions/frontend/analise/: barChart.py  insights.py  lineChart.py
python/streamlit/functions/frontend/diagnostico/: autocorrelation.py  decomposition.py  differentiation.py  windowing.py
python/streamlit/functions/frontend/previsao/: models.py  residuals.py
python/streamlit/functions/utils/: columns.py
python/streamlit/notebooks/: airpassenger.ipynb  autoregressive.ipynb  moving_average.ipynb  previsao.ipynb  residuos.ipynb  sarima.ipynb  test.ipynb  teste2.ipynb  utils.py
python/streamlit/pages/: 1_💬_Sobre os dados.py  1_📈_Análises.py  2_📈_Analises.py  2_📈_Modelos.py  2_🕵🏻_Diagnóstico.py  3_🔮_Previsão.py
www/css/: style.css
